--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="menu">
         <ul class="botonera">
             <li><a href="#">Acerca de Nosotros</a></li>
-            <li><a href="#">Cursos</a></li>
+            <li><a href="cursos.html">Cursos</a></li>
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Metodos de Pagos</a></li>
         </ul>
