--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/icons/icons.css"> 
     <script src="static/js/flyer.js"></script>
+    
 </head>
 <body>
     <header>
@@ -27,10 +28,29 @@
     </header>
     <nav class="menu">
         <ul class="botonera">
-            <li><a href="#">Acerca de Nosotros</a></li>
-            <li><a href="cursos.html">Cursos</a></li>
+            <li>
+                <div class="dropdown">
+                    <a href="nosotros.html" class="dropbtn">Acerca de Nosotros <span class="icon-arrow-down2"></span></a>
+                    <div class="dropdown-content">
+                        <a href="profesores.html">Equipo</a>
+                        <a href="nosotros.html">Historia</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="dropdown">
+                    <button class="dropbtn">Cursos <span class="icon-arrow-down2"></span></button>
+                   <div class="dropdown-content">
+                     <a href="#">Alemán</a>
+                     <a href="#">Francés</a>
+                     <a href="#">Inglés</a>
+                     <a href="#">Italiano</a>
+                     <a href="#">Portugues</a>
+                   </div>
+                </div>
+            </li> <!-- Cambie el enlace por un botón -->
             <li><a href="#">Contacto</a></li>
-            <li><a href="#">Metodos de Pagos</a></li>
+            <li><a href="#">Métodos de Pagos</a></li>
         </ul>
     </nav>
     <main class="contenedor">
