--- a/nosotros.html
+++ b/nosotros.html
@@ -6,17 +6,17 @@
     <title>Sobre Nosotros - E-LINGUA ACADEMY</title>
     <link rel="stylesheet" href="static/css/estilos.css">
     <link rel="stylesheet" href="static/css/nosotros.css">
-    <link rel="stylesheet" href="icons/icons.css">
+    <link rel="stylesheet" href="static/icons/icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <body>  
-    <header>  
+    <header>
         <div class="banner"> 
-            <img id="logo" src="img/logo.png" alt="logo">
+            <img id="logo" src="static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
-        <div class="banner">
+       <div class="banner">
             <a class="btn" href="#">Log in</a>
             <a class="btn" href="#">Sign up</a>
        </div>
@@ -24,7 +24,18 @@
     <nav class="menu">
         <ul class="botonera">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Cursos</a></li>
+            <li>
+                <div class="dropdown">
+                    <button class="dropbtn">Cursos <span class="icon-arrow-down2"></span></button>
+                   <div class="dropdown-content">
+                     <a href="#">Alemán</a>
+                     <a href="#">Francés</a>
+                     <a href="#">Inglés</a>
+                     <a href="#">Italiano</a>
+                     <a href="#">Portugues</a>
+                   </div>
+                </div>
+            </li>
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Metodos de Pagos</a></li>
         </ul>
