Se agregan todas las paginas (Login, Registro, Contacto, Metodos) y los links para navegar en ella. También se acomodan los estilos de las mismas, el header y footer.

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             <img id="logo" src="static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
-       <div class="banner">
-            <a class="btn" href="#">Log in</a>
-            <a class="btn" href="#">Sign up</a>
-       </div>
+        <div class="banner">
+            <a class="btn" href="login.html">Log in</a>
+            <a class="btn" href="registro.html">Sign up</a>
+        </div>
     </header>
     <nav class="menu">
         <ul class="botonera">
             <li><a href="#">Acerca de Nosotros</a></li>
             <li><a href="cursos.html">Cursos</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Metodos de Pagos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="metodos.html">Metodos de Pagos</a></li> <!-- Se añade el link -->
         </ul>
     </nav>
     <main class="contenedor">
