--- a/cursos.html
+++ b/cursos.html
@@ -19,16 +19,16 @@
             <h1>E-LINGUA ACADEMY</h1>
         </div>
        <div class="banner">
-            <a class="btn" href="#">Log in</a>
-            <a class="btn" href="#">Sign up</a>
+            <a class="btn" href="login.html">Log in</a>
+            <a class="btn" href="registro.html">Sign up</a>
        </div>
     </header>
     <nav class="menu">
         <ul class="botonera">
+          <li><a href="index.html">Home</a></li>
             <li><a href="#">Acerca de Nosotros</a></li>
-            <li><a href="cursos.html">Cursos</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Metodos de Pagos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="metodos.html">Metodos de Pagos</a></li>
         </ul>
     </nav>
     <main class="contenedor">
