--- a/metodos.html
+++ b/metodos.html
@@ -13,8 +13,8 @@
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
-            <a class="btn" href="#">Log in</a>
-            <a class="btn" href="#">Sign up</a>
+            <a class="btn" href="login.html">Log in</a>
+            <a class="btn" href="registro.html">Sign up</a>
         </div>
     </header>
 
@@ -22,10 +22,10 @@
         <div class="menu">
             <nav class="botonera">
                 <ul class="botonera">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Acerca de Nosotros</a></li>
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -72,29 +72,29 @@
                     <div class="columna">
                         <h3 class="titulo">Pago</h3>
                     <div class="input-box">
-                        <span>Tarjetas aceptadas :</span>
+                        <span>Tarjetas aceptadas:</span>
                         <img src="static/img/imgcards.png" alt="tarjetas">
                     </div>
                     <div class="input-box">
-                        <span>Titular de la tarjeta :</span>
+                        <span>Titular de la tarjeta:</span>
                         <input type="text" placeholder="Juan Perez">
                     </div>
                     <div class="input-box">
-                        <span>Número de Tarjeta de Crédito :</span>
+                        <span>Número de Tarjeta de Crédito:</span>
                         <input type="number" placeholder="1111 2222 3333 4444">
                     </div>
                     <div class="input-box">
-                        <span>Mes de Vencimiento :</span>
+                        <span>Mes de Vencimiento:</span>
                         <input type="text" placeholder="Agosto">
                     </div>
 
                     <div class="flex">
                         <div class="input-box">
-                            <span>Año de vencimiento :</span>
+                            <span>Año de vencimiento:</span>
                             <input type="number" placeholder="2027">
                         </div>
                         <div class="input-box">
-                            <span>Código de seguridad :</span>
+                            <span>Código de seguridad:</span>
                             <input type="number" placeholder="123">
                         </div>
                     </div>
@@ -106,6 +106,22 @@
             </form>
         </div>
 
+        <footer>
+            <div id="copyright">
+                <p>Copyright © 2024 E-Lingua Academy.com. Todos los derechos reservados.</p>
+            </div>
+            <div class="redes">
+                <ul class="iconos">
+                    <li><span class="icon-facebook2"></span></li>
+                    <li><span class="icon-instagram"></span></li>
+                    <li><span class="icon-linkedin"></span></li>
+                </ul>
+            </div>
+            <div class="ubicacion">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6568.062053475883!2d-58.39493812972943!3d-34.603376932412615!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaea670d4e67%3A0x2198c954311ad6d9!2sDa%20Vinci%20%7C%20Primera%20Escuela%20de%20Arte%20Multimedial!5e0!3m2!1ses!2sar!4v1713625653880!5m2!1ses!2sar" width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p>Av. Corrientes 2037, C1001 Cdad. Autónoma de Buenos Aires.</p>
+            </div>
+        </footer>
 
     </body>
 </html>
