--- a/cursos.html
+++ b/cursos.html
@@ -33,7 +33,7 @@
     </nav>
     <main class="contenedor">
       <div class="grid-container">
-        <a href="page1.html" class="grid-item">
+        <a href="/static/idiomas/ingles.html" class="grid-item">
           <img src="static/img/English.png" alt="Image 1">
           <div class="title">inglés</div>
         </a>
