--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="static/css/estilos.css">
     <link rel="stylesheet" href="static/css/flyer.css">
     <link rel="stylesheet" href="static/css/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -54,7 +55,7 @@
         </ul>
     </nav>
     <main class="contenedor">
-        <h2>¡Bienvenido a E-Lingua Academy!</h2>
+        <h2 class="animate__animated animate__heartBeat">¡Bienvenido a E-Lingua Academy!</h2>
         <h3>Somos tu plataforma para aprender idiomas de manera fácil y divertida.</h3>
 
         <p id="poesia">"Aprender otro idioma no es solamente aprender palabras diferentes para las mismas cosas, sino aprender otra manera de pensar acerca de las cosas". Flora Lewis</p>
