--- a/profesores.html
+++ b/profesores.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfiles de Profesionales de Idiomas</title>
-  <link rel="stylesheet" href="static/css/estilos.css">
-  <link rel="stylesheet" href="static/css/profesores.css">
-  <link rel="stylesheet" href="static/icons/icons.css">
+  <link rel="stylesheet" href="/static/css/estilos.css">
+  <link rel="stylesheet" href="/static/css/profesores.css">
+  <link rel="stylesheet" href="/static/icons/icons.css">
 </head>
 <body>
   <header>
     <div class="banner"> 
-        <img id="logo" src="static/img/logo.png" alt="logo">
+        <img id="logo" src="/static/img/logo.png" alt="logo">
         <h1>E-LINGUA ACADEMY</h1>
     </div>
    <div class="banner">
