Cambios del lorem y dirección

--- a/contacto.html
+++ b/contacto.html
@@ -86,12 +86,12 @@
                 <div class="contacto-info">
                     <h4>Más información</h4>
                     <ul>
-                        <li><img src="static/img/maps-and-flags.png" alt="ubicación" width="20vw">Av. 9 de Julio s/n, C1043 Cdad. Autónoma de Buenos Aires</li>
-                        <li><img src="static/img/telephone.png" alt="celular" width="20vw"> +54 1123342445</li>
+                        <li><img src="static/img/maps-and-flags.png" alt="ubicación" width="20vw">Av. Corrientes 2037, C1001 Cdad. Autónoma de Buenos Aires.</li>
+                        <li><img src="static/img/telephone.png" alt="celular" width="20vw"> +54 1122223333</li>
                         <li><img src="static/img/email.png" alt="email" width="20vw">contacto@sitioweb.com</li>
                     </ul>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat perferendis rerum voluptatem dignissimos dolores nihil magnam veniam iusto blanditiis! Nihil.
+                        Para obtener más información sobre nuestros cursos y servicios, no dudes en ponerte en contacto con nosotros.
                     </p>
                     <p>
                         E-lingua Academy
