--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Inicio de sesión</title>
+        <link rel="icon" type="logo.png" href="static/img/logo.png">
         <link rel="stylesheet" href="static/css/login.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
