--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nosotros - E-LINGUA ACADEMY</title>
+    <link rel="icon" type="logo.png" href="static/img/logo.png">
     <link rel="stylesheet" href="static/css/estilos.css">
     <link rel="stylesheet" href="static/css/nosotros.css">
     <link rel="stylesheet" href="static/icons/icons.css">
