--- a/profesores.html
+++ b/profesores.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfiles de Profesionales de Idiomas</title>
+  <link rel="icon" type="logo.png" href="static/img/logo.png">
   <link rel="stylesheet" href="/static/css/estilos.css">
   <link rel="stylesheet" href="/static/css/profesores.css">
   <link rel="stylesheet" href="/static/icons/icons.css">
