--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             </li>
             <li>
                 <div class="dropdown">
-                    <button class="dropbtn">Cursos <span class="icon-arrow-down2"></span></button>
-                   <div class="dropdown-content">
-                     <a href="#">Alemán</a>
-                     <a href="#">Francés</a>
-                     <a href="#">Inglés</a>
-                     <a href="#">Italiano</a>
-                     <a href="#">Portugues</a>
+                    <a href="cursos.html" class="dropbtn">Cursos <span class="icon-arrow-down2"></span></a>
+                    <div class="dropdown-content">
+                     <a href="static/idiomas/aleman.html">Alemán</a>
+                     <a href="static/idiomas/frances.html">Francés</a>
+                     <a href="static/idiomas/ingles.html">Inglés</a>
+                     <a href="static/idiomas/español.html">Español</a>
+                     <a href="static/idiomas/portugues.html">Portugues</a>
                    </div>
                 </div>
             </li> <!-- Cambie el enlace por un botón -->
