mis cambios a martin

--- a/index.html
+++ b/index.html
@@ -23,36 +23,17 @@
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
-                <a class="btn" href="login.html">Log in</a>
-                <a class="btn" href="registro.html">Sign up</a>
+                <a class="btn" href="/login.html">Log in</a>
+                <a class="btn" href="/registro.html">Sign up</a>
         </div>
     </header>
 
     <nav class="menu">
         <ul class="botonera">
-            <li>
-                <div class="dropdown">
-                    <a href="nosotros.html" class="dropbtn">Acerca de Nosotros <span class="icon-arrow-down2"></span></a>
-                    <div class="dropdown-content">
-                        <a href="profesores.html">Equipo</a>
-                        <a href="nosotros.html">Historia</a>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="dropdown">
-                    <button class="dropbtn">Cursos <span class="icon-arrow-down2"></span></button>
-                    <div class="dropdown-content">
-                        <a href="#">Alemán</a>
-                        <a href="#">Francés</a>
-                        <a href="#">Inglés</a>
-                        <a href="#">Italiano</a>
-                        <a href="#">Portugues</a>
-                    </div>
-                </div>
-            </li> <!-- Cambie el enlace por un botón -->
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="metodos.html">Métodos de Pagos</a></li>
+            <li><a href="/nosotros.html">Acerca de Nosotros</a></li>
+            <li><a href="/cursos.html">Cursos</a></li>
+            <li><a href="/contacto.html">Contacto</a></li>
+            <li><a href="/metodos.html">Metodos de Pagos</a></li>
         </ul>
     </nav>
     
