--- a/metodos.html
+++ b/metodos.html
@@ -25,8 +25,8 @@
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
-            <a class="btn" href="login.html">Log in</a>
-            <a class="btn" href="registro.html">Sign up</a>
+            <a class="btn" href="/login.html">Log in</a>
+            <a class="btn" href="/registro.html">Sign up</a>
         </div>
     </header>
 
@@ -34,10 +34,10 @@
         <div class="menu">
             <nav class="botonera">
                 <ul class="botonera">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Acerca de Nosotros</a></li>
-                    <li><a href="cursos.html">Cursos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/nosotros.html">Acerca de Nosotros</a></li>
+                    <li><a href="/cursos.html">Cursos</a></li>
+                    <li><a href="/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
