--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
     </header>
     <nav class="menu">
         <ul class="botonera">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li>
                 <div class="dropdown">
                     <button class="dropbtn">Cursos <span class="icon-arrow-down2"></span></button>
