--- a/contacto.html
+++ b/contacto.html
@@ -28,8 +28,8 @@
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
-            <a class="btn" href="login.html">Log in</a>
-            <a class="btn" href="registro.html">Sign up</a>
+            <a class="btn" href="/login.html">Log in</a>
+            <a class="btn" href="/registro.html">Sign up</a>
         </div>
     </header>
 
@@ -37,10 +37,10 @@
         <div class="menu">
             <nav class="botonera">
                 <ul class="botonera">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Acerca de Nosotros</a></li>
-                    <li><a href="cursos.html">Cursos</a></li>
-                    <li><a href="metodos.html">Metodos de pago</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/nosotros.html">Acerca de Nosotros</a></li>
+                    <li><a href="/cursos.html">Cursos</a></li>
+                    <li><a href="/metodos.html">Metodos de pago</a></li>
                 </ul>
             </nav>
         </div>
