--- a/static/idiomas/aleman.html
+++ b/static/idiomas/aleman.html
@@ -30,10 +30,10 @@
     <nav class="menu">
         <ul class="botonera">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="#">Acerca de nosotros</a></li>
-            <li><a href="cursos.html">Cursos</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Metodos de Pagos</a></li>
+            <li><a href="/nosotros.html">Acerca de nosotros</a></li>
+            <li><a href="/cursos.html">Cursos</a></li>
+            <li><a href="/contacto.html">Contacto</a></li>
+            <li><a href="/metodos.html">Metodos de Pagos</a></li>
         </ul>
     </nav>
     <main class="idiomas">
