Estilos y links a paginas

--- a/cursos.html
+++ b/cursos.html
@@ -26,6 +26,7 @@
   </header>
   <nav class="menu">
     <ul class="botonera">
+      <li><a href="/index.html">Home</a></li>
       <li>
         <div class="dropdown">
           <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
@@ -35,18 +36,6 @@
           </div>
         </div>
       </li>
-      <li>
-        <div class="dropdown">
-          <button class="dropbtn">Cursos</button>
-          <div class="dropdown-content">
-            <a href="#">Alemán</a>
-            <a href="#">Francés</a>
-            <a href="#">Inglés</a>
-            <a href="#">Español</a>
-            <a href="#">Portugués</a>
-          </div>
-        </div>
-      </li> <!-- Cambie el enlace por un botón -->
       <li><a href="contacto.html">Contacto</a></li>
       <li><a href="metodos.html">Métodos de Pagos</a></li>
     </ul>
