--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nosotros - E-LINGUA ACADEMY</title>
+    <title>Acerca de Nosotros</title>
     <link rel="icon" type="logo.png" href="/static/img/logo.png">
     <link rel="stylesheet" href="/static/css/estilos.css">
     <link rel="stylesheet" href="/static/css/nosotros.css">
@@ -24,6 +24,7 @@
     </header>
     <nav class="menu">
         <ul class="botonera">
+            <li><a href="/index.html">Home</a></li>
             <li>
                 <div class="dropdown">
                     <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
@@ -37,11 +38,12 @@
                 <div class="dropdown">
                     <button class="dropbtn">Cursos</button>
                     <div class="dropdown-content">
-                        <a href="#">Alemán</a>
-                        <a href="#">Francés</a>
-                        <a href="#">Inglés</a>
-                        <a href="#">Español</a>
-                        <a href="#">Portugués</a>
+                        <a href="/static/idiomas/aleman.html">Alemán</a>
+                        <a href="/static/idiomas/frances.html">Francés</a>
+                        <a href="/static/idiomas/ingles.html">Inglés</a>
+                        <a href="/static/idiomas/español.html">Español</a>
+                        <a href="/static/idiomas/portugues.html">Portugués</a>
+                        <a href="/cursos.html">Todos los Cursos</a>
                     </div>
                 </div>
             </li> <!-- Cambie el enlace por un botón -->
