--- a/static/idiomas/aleman.html
+++ b/static/idiomas/aleman.html
@@ -23,17 +23,36 @@
             <h1>E-LINGUA ACADEMY</h1>
         </div>
        <div class="banner">
-            <a class="btn" href="#">Log in</a>
-            <a class="btn" href="#">Sign up</a>
+            <a class="btn" href="/login.html">Log in</a>
+            <a class="btn" href="/registro.html">Sign up</a>
        </div>
     </header>
     <nav class="menu">
         <ul class="botonera">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/nosotros.html">Acerca de nosotros</a></li>
-            <li><a href="/cursos.html">Cursos</a></li>
-            <li><a href="/contacto.html">Contacto</a></li>
-            <li><a href="/metodos.html">Metodos de Pagos</a></li>
+            <li>
+                <div class="dropdown">
+                    <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+                    <div class="dropdown-content">
+                        <a href="/profesores.html">Equipo</a>
+                        <a href="/nosotros.html">Historia</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="dropdown">
+                    <button class="dropbtn">Cursos</button>
+                    <div class="dropdown-content">
+                        <a href="/static/idiomas/frances.html">Francés</a>
+                        <a href="/static/idiomas/ingles.html">Inglés</a>
+                        <a href="/static/idiomas/español.html">Español</a>
+                        <a href="/static/idiomas/portugues.html">Portugués</a>
+                        <a href="/cursos.html">Todos los Cursos</a>
+                    </div>
+                </div>
+            </li> <!-- Cambie el enlace por un botón -->
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="metodos.html">Métodos de Pagos</a></li>
         </ul>
     </nav>
     <main class="idiomas">
