--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
                 <div class="dropdown">
                     <button class="dropbtn">Cursos</button>
                     <div class="dropdown-content">
-                        <a href="#">Alemán</a>
-                        <a href="#">Francés</a>
-                        <a href="#">Inglés</a>
-                        <a href="#">Español</a>
-                        <a href="#">Portugués</a>
+                        <a href="/static/idiomas/aleman.html">Alemán</a>
+                        <a href="/static/idiomas/frances.html">Francés</a>
+                        <a href="/static/idiomas/ingles.html">Inglés</a>
+                        <a href="/static/idiomas/español.html">Español</a>
+                        <a href="/static/idiomas/portugues.html">Portugués</a>
+                        <a href="/cursos.html">Todos los Cursos</a>
                     </div>
                 </div>
             </li> <!-- Cambie el enlace por un botón -->
