--- a/metodos.html
+++ b/metodos.html
@@ -32,6 +32,7 @@
 
 <nav class="menu">
         <ul class="botonera">
+            <li><a href="/index.html">Home</a></li>
             <li>
                 <div class="dropdown">
                     <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
@@ -45,16 +46,16 @@
                 <div class="dropdown">
                     <button class="dropbtn">Cursos</button>
                     <div class="dropdown-content">
-                        <a href="#">Alemán</a>
-                        <a href="#">Francés</a>
-                        <a href="#">Inglés</a>
-                        <a href="#">Español</a>
-                        <a href="#">Portugués</a>
+                        <a href="/static/idiomas/aleman.html">Alemán</a>
+                        <a href="/static/idiomas/frances.html">Francés</a>
+                        <a href="/static/idiomas/ingles.html">Inglés</a>
+                        <a href="/static/idiomas/español.html">Español</a>
+                        <a href="/static/idiomas/portugues.html">Portugués</a>
+                        <a href="/cursos.html">Todos los Cursos</a>
                     </div>
                 </div>
             </li> <!-- Cambie el enlace por un botón -->
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="metodos.html">Métodos de Pagos</a></li>
         </ul>
     </nav>
         
