Arreglé bugs en el diseño, corregí redirecciones a links, y añadí media querys para diseño responsivo

--- a/nosotros.html
+++ b/nosotros.html
@@ -36,8 +36,8 @@
             </li>
             <li>
                 <div class="dropdown">
-                    <button class="dropbtn">Cursos</button>
-                    <div class="dropdown-content">
+                    <a href="cursos.html" class="dropbtn">Cursos</a>
+                 <div class="dropdown-content">
                         <a href="/static/idiomas/aleman.html">Alemán</a>
                         <a href="/static/idiomas/frances.html">Francés</a>
                         <a href="/static/idiomas/ingles.html">Inglés</a>
@@ -71,7 +71,7 @@
             </ul>
         </div>
         <div class="ubicacion">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6568.062053475883!2d-58.39493812972943!3d-34.603376932412615!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaea670d4e67%3A0x2198c954311ad6d9!2sDa%20Vinci%20%7C%20Primera%20Escuela%20de%20Arte%20Multimedial!5e0!3m2!1ses!2sar!4v1713625653880!5m2!1ses!2sar" width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6568.062053475883!2d-58.39493812972943!3d-34.603376932412615!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaea670d4e67%3A0x2198c954311ad6d9!2sDa%20Vinci%20%7C%20Primera%20Escuela%20de%20Arte%20Multimedial!5e0!3m2!1ses!2sar!4v1713625653880!5m2!1ses!2sar" width="200%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <p>Av. Corrientes 2037, C1001 Cdad. Autónoma de Buenos Aires.</p>
         </div>
     </footer>
