--- a/cursos.html
+++ b/cursos.html
@@ -46,19 +46,19 @@
         <img src="static/img/English.png" alt="Image 1">
         <div class="title">Inglés</div>
       </a>
-      <a href="page2.html" class="grid-item">
+      <a href="static/idiomas/frances.html" class="grid-item">
         <img src="static/img/French.png" alt="Image 2">
         <div class="title">Francés</div>
       </a>
-      <a href="page3.html" class="grid-item">
-        <img src="static/img/Italian.svg" alt="Image 3">
-        <div class="title">Italiano</div>
+      <a href="static/idiomas/aleman.html" class="grid-item">
+        <img src="static/img/alemania.png" alt="Image 3">
+        <div class="title">Alemán</div>
       </a>
-      <a href="page4.html" class="grid-item">
+      <a href="static/idiomas/español.html" class="grid-item">
         <img src="static/img/Spanish.png" alt="Image 4">
         <div class="title">Español</div>
       </a>
-      <a href="page5.html" class="grid-item">
+      <a href="static/idiomas/portugues.html" class="grid-item">
         <img src="static/img/Portugues.png" alt="Image 5">
         <div class="title">Portugués</div>
       </a>
