Fixing paths in courses

--- a/static/idiomas/español.html
+++ b/static/idiomas/español.html
@@ -33,7 +33,7 @@
             <li><a href="/index.html">Home</a></li>
             <li>
                 <div class="dropdown">
-                    <a href="../../nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+                    <a href="/nosotros.html" class="dropbtn">Acerca de Nosotros</a>
                     <div class="dropdown-content">
                         <a href="/profesores.html">Equipo</a>
                         <a href="/nosotros.html">Historia</a>
@@ -42,7 +42,7 @@
             </li>
             <li>
                 <div class="dropdown">
-                    <a href="../../cursos.html" class="dropbtn">Cursos</a>
+                    <a href="/cursos.html" class="dropbtn">Cursos</a>
                     <div class="dropdown-content">
                         <a href="/static/idiomas/aleman.html">Alemán</a>
                         <a href="/static/idiomas/frances.html">Francés</a>
@@ -53,8 +53,8 @@
                     </div>
                 </div>
             </li> <!-- Cambie el enlace por un botón -->
-            <li><a href="../../contacto.html">Contacto</a></li>
-            <li><a href="../../metodos.html">Métodos de Pagos</a></li>
+            <li><a href="/contacto.html">Contacto</a></li>
+            <li><a href="/metodos.html">Métodos de Pagos</a></li>
         </ul>
     </nav>
     <main class="idiomas">
