Fixing paths on main pages

--- a/cursos.html
+++ b/cursos.html
@@ -29,37 +29,37 @@
       <li><a href="/index.html">Home</a></li>
       <li>
         <div class="dropdown">
-          <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+          <a href="/nosotros.html" class="dropbtn">Acerca de Nosotros</a>
           <div class="dropdown-content">
-            <a href="profesores.html">Equipo</a>
-            <a href="nosotros.html">Historia</a>
+            <a href="/profesores.html">Equipo</a>
+            <a href="/nosotros.html">Historia</a>
           </div>
         </div>
       </li>
-      <li><a href="contacto.html">Contacto</a></li>
-      <li><a href="metodos.html">Métodos de Pagos</a></li>
+      <li><a href="/contacto.html">Contacto</a></li>
+      <li><a href="/metodos.html">Métodos de Pagos</a></li>
     </ul>
   </nav>
   <main class="contenedor">
     <div class="grid-container">
       <a href="/static/idiomas/ingles.html" class="grid-item">
-        <img src="static/img/English.png" alt="Image 1">
+        <img src="/static/img/English.png" alt="Image 1">
         <div class="title">Inglés</div>
       </a>
-      <a href="static/idiomas/frances.html" class="grid-item">
-        <img src="static/img/French.png" alt="Image 2">
+      <a href="/static/idiomas/frances.html" class="grid-item">
+        <img src="/static/img/French.png" alt="Image 2">
         <div class="title">Francés</div>
       </a>
-      <a href="static/idiomas/aleman.html" class="grid-item">
-        <img src="static/img/alemania.png" alt="Image 3">
+      <a href="/static/idiomas/aleman.html" class="grid-item">
+        <img src="/static/img/alemania.png" alt="Image 3">
         <div class="title">Alemán</div>
       </a>
-      <a href="static/idiomas/español.html" class="grid-item">
-        <img src="static/img/Spanish.png" alt="Image 4">
+      <a href="/static/idiomas/español.html" class="grid-item">
+        <img src="/static/img/Spanish.png" alt="Image 4">
         <div class="title">Español</div>
       </a>
-      <a href="static/idiomas/portugues.html" class="grid-item">
-        <img src="static/img/Portugues.png" alt="Image 5">
+      <a href="/static/idiomas/portugues.html" class="grid-item">
+        <img src="/static/img/Portugues.png" alt="Image 5">
         <div class="title">Portugués</div>
       </a>
     </div>
