--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
             <li>
                 <div class="dropdown">
-                    <a href="cursos.html" class="dropbtn">Cursos</a>
+                    <a href="/cursos.html" class="dropbtn">Cursos</a>
                     <div class="dropdown-content">
                         <a href="/static/idiomas/aleman.html">Alemán</a>
                         <a href="/static/idiomas/frances.html">Francés</a>
