--- a/profesores.html
+++ b/profesores.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="banner"> 
-        <img id="logo" src="static/img/logo.png" alt="logo">
+        <img id="logo" src="/static/img/logo.png" alt="logo">
         <h1>E-LINGUA ACADEMY</h1>
     </div>
     <div class="banner">
@@ -25,16 +25,16 @@
       <li><a href="/index.html">Home</a></li>
       <li>
         <div class="dropdown">
-          <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+          <a href="/nosotros.html" class="dropbtn">Acerca de Nosotros</a>
           <div class="dropdown-content">
-              <a href="profesores.html">Equipo</a>
-              <a href="nosotros.html">Historia</a>
+              <a href="/profesores.html">Equipo</a>
+              <a href="/nosotros.html">Historia</a>
           </div>
         </div>
       </li>
       <li>
         <div class="dropdown">
-            <a href="cursos.html" class="dropbtn">Cursos</a>
+            <a href="/cursos.html" class="dropbtn">Cursos</a>
             <div class="dropdown-content">
               <a href="/static/idiomas/aleman.html">Alemán</a>
               <a href="/static/idiomas/frances.html">Francés</a>
@@ -45,31 +45,31 @@
             </div>
         </div>
       </li> <!-- Cambie el enlace por un botón -->
-      <li><a href="contacto.html">Contacto</a></li>
-      <li><a href="metodos.html">Métodos de Pagos</a></li>
+      <li><a href="/contacto.html">Contacto</a></li>
+      <li><a href="/metodos.html">Métodos de Pagos</a></li>
     </ul>
   </nav>
   <main class="grid-container">
     <div class="profesor">
-        <img src="profesor1.jpg" alt="Mantin">
+        <img src="/static/img/profesor1.jpg" alt="Mantin">
         <h2>Martín Leiva</h2>
         <p>Profesor de inglés</p>
         <p>Con más de 10 años de experiencia en la enseñanza del inglés como segundo idioma, Mantin es un apasionado por ayudar a sus estudiantes a alcanzar fluidez y confianza en el idioma. Su enfoque dinámico y personalizado hace que las clases sean interactivas y divertidas, adaptándose a las necesidades individuales de cada alumno.</p>
     </div>
     <div class="profesor">
-        <img src="profesor2.jpg" alt="Tom">
+        <img src="/static/img/profesor1.jpg" alt="Tom">
         <h2>Tom Harry</h2>
         <p>Profesor de italiano</p>
         <p>Tom es un lingüista experimentado especializado en la enseñanza del italiano como lengua extranjera. Con una sólida formación académica y una pasión por la cultura italiana, sus clases van más allá de la gramática y el vocabulario, ofreciendo a los estudiantes una comprensión profunda del idioma y la sociedad italófona.</p>
     </div>
     <div class="profesor">
-        <img src="profesor3.jpg" alt="Nahuel">
+        <img src="/static/img/profesor1.jpg" alt="Nahuel">
         <h2>Nahuel Jiménez</h2>
         <p>Profesor de portugués</p>
         <p>Nahuel es un experto en la enseñanza del portugués, con un enfoque especial en la cultura y el idioma de Brasil y Portugal. Su pasión por la lengua portuguesa se refleja en su enseñanza, donde combina habilidades lingüísticas con conocimientos culturales para ofrecer una experiencia de aprendizaje completa y enriquecedora.</p>
     </div>
     <div class="profesor">
-        <img src="img/andres2004.jpg" alt="Andrés">
+        <img src="/static/img/profesor1.jpg" alt="Andrés">
         <h2>Andrés Carlin</h2>
         <p>Profesor de francés y alemán</p>
         <p>Andrés es un apasionado por el francés y el alemán, así como por las culturas que representan. Con una amplia experiencia en la enseñanza de ambos idiomas, se esfuerza por transmitir no solo habilidades lingüísticas, sino también un profundo entendimiento de la literatura, la historia y la sociedad de ambos países.</p>
