--- a/login.html
+++ b/login.html
@@ -10,20 +10,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/icons/icons.css">
+    <link rel="stylesheet" href="/static/icons/icons.css">
 </head>
 
 <body>
     <header>
         <div class="banner"> 
-            <img id="logo" src="static/img/logo.png" alt="logo">
+            <img id="logo" src="/static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
     </header>
     <main>
         <form class="form">
             <h2 class="form_titulo">Inicia Sesión</h2>
-            <p class="form_p">¿Aún no tienes una cuenta? <a href="registro.html" class="form_link">Registrate aquí</a></p>
+            <p class="form_p">¿Aún no tienes una cuenta? <a href="/registro.html" class="form_link">Registrate aquí</a></p>
 
             <div class="form_container">
                 <div class="form_agrupado">
