--- a/metodos.html
+++ b/metodos.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Metodos de pago</title>
-        <link rel="icon" type="logo.png" href="static/img/logo.png">
+        <link rel="icon" type="logo.png" href="/static/img/logo.png">
         <link rel="stylesheet" href="static/css/estilos.css">
         <link rel="stylesheet" href="static/css/metodos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="static/icons/icons.css"> 
+        <link rel="stylesheet" href="/static/icons/icons.css"> 
 
         <!--jQuery -->
         <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -21,7 +21,7 @@
     
     <header class="header">
         <div class="banner"> 
-            <img id="logo" src="static/img/logo.png" alt="logo">
+            <img id="logo" src="/static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
@@ -35,10 +35,10 @@
             <li><a href="/index.html">Home</a></li>
             <li>
                 <div class="dropdown">
-                    <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+                    <a href="/nosotros.html" class="dropbtn">Acerca de Nosotros</a>
                     <div class="dropdown-content">
-                        <a href="profesores.html">Equipo</a>
-                        <a href="nosotros.html">Historia</a>
+                        <a href="/profesores.html">Equipo</a>
+                        <a href="/nosotros.html">Historia</a>
                     </div>
                 </div>
             </li>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </li> <!-- Cambie el enlace por un botón -->
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="/contacto.html">Contacto</a></li>
         </ul>
     </nav>
         
@@ -101,7 +101,7 @@
                         <h3 class="titulo">Pago</h3>
                     <div class="input-box">
                         <span>Tarjetas aceptadas:</span>
-                        <img src="static/img/imgcards.png" alt="tarjetas">
+                        <img src="/static/img/imgcards.png" alt="tarjetas">
                     </div>
                     <div class="input-box">
                         <span>Titular de la Tarjeta:</span>
