--- a/nosotros.html
+++ b/nosotros.html
@@ -27,16 +27,16 @@
             <li><a href="/index.html">Home</a></li>
             <li>
                 <div class="dropdown">
-                    <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+                    <a href="/nosotros.html" class="dropbtn">Acerca de Nosotros</a>
                     <div class="dropdown-content">
-                        <a href="profesores.html">Equipo</a>
-                        <a href="nosotros.html">Historia</a>
+                        <a href="/profesores.html">Equipo</a>
+                        <a href="/nosotros.html">Historia</a>
                     </div>
                 </div>
             </li>
             <li>
                 <div class="dropdown">
-                    <a href="cursos.html" class="dropbtn">Cursos</a>
+                    <a href="/cursos.html" class="dropbtn">Cursos</a>
                  <div class="dropdown-content">
                         <a href="/static/idiomas/aleman.html">Alemán</a>
                         <a href="/static/idiomas/frances.html">Francés</a>
@@ -47,8 +47,8 @@
                     </div>
                 </div>
             </li> <!-- Cambie el enlace por un botón -->
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="metodos.html">Métodos de Pagos</a></li>
+            <li><a href="/contacto.html">Contacto</a></li>
+            <li><a href="/metodos.html">Métodos de Pagos</a></li>
         </ul>
     </nav>
     <main class="container-nos">
